# ppt-present-with-transcribe-translate-with-obs

./: .gitignore  README.md  instructions.md  pyproject.toml  start.sh
backend/: audio_capture.py  main.py  transcribe_client.py
frontend/: script.js  style.css  subtitles.html
